@@ -1,4 +1,5 @@
 {{$NEXT}}
+  Locale test on windows doesn't work, so disable it when $^O eq MSWin32
 
 Warnings-Version-0.003001  2015-06-19
   5.22 test file fixed.
